# Cmake_project_template

./: CMakeLists.txt  README.md  create_project.py
app/: CMakeLists.txt
app/src/: main.cpp
include/libA/: libA.h
include/libB/: libB.h
lib/libA/: CMakeLists.txt
lib/libA/src/: libA.cpp
lib/libB/: CMakeLists.txt
lib/libB/src/: libB.cpp
libs/: liblibB.dylib  liblibExternal.dylib
